# NB2016

./: .gitignore  CMakeLists.txt  CTP_market_data_feeder.cpp  CTP_market_data_feeder.h  CTP_trade_svc.cpp  CTP_trade_svc.h  contract.cpp  contract.h  dynamic_library.cpp  dynamic_library.h  history_market_data_feeder.cpp  history_market_data_feeder.h  log.cpp  log.h  main.cpp  market_data.cpp  market_data.h  market_data_feeder.cpp  market_data_feeder.h  order.cpp  order.h  order_manager.cpp  order_manager.h  plugin_interface.h  plugin_log.cpp  plugin_log.h  plugin_manager.cpp  plugin_manager.h  plugin_proxy.cpp  plugin_proxy.h  position.cpp  position.h  position_manager.cpp  position_manager.h  simulation_trade_svc.cpp  simulation_trade_svc.h  snapshot_manager.cpp  snapshot_manager.h  strategy_interface.cpp  strategy_interface.h  (+6 more)
doc/v6.3.6_tradeapi_20151215_2/: v636_20151215_traderAPI版本说明.txt
